# AI-Medical-Report-Summarizer

./: .gitignore  Readme.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  scheduler.py  test.py  workers.sh
backend/app/: mappings.json
backend/app/db/: __init__.py  db.py
backend/app/lib/: __init__.py  constants.py  create_logging.py  email_template.py  jwt.py  llm.py  prompt.py  qdrant.py  redis.py  seed.py
backend/app/middleware/: auth.py
backend/app/models/: AISummary.py  Chat.py  ChatSession.py  ConfimationTests.py  ConfirmationTests.py  Patient.py  ReportMetadata.py  ReportedMedications.py  Reports.py  ReportsData.py  ReportsMedia.py  ScreeningTests.py  SpecimenValidity.py  TestResults.py  User.py  __init__.py
backend/app/ocr/: __init__.py  extraction.py  llm_response.py  preprocess.py  prompt_chaining.py
backend/app/routers/: auth.py  chat.py  patients.py  report_routes.py  trends.py  user.py
backend/app/schemas/: Auth.py  ChatSession.py  Patient.py  TestOutcome.py  __init__.py  response.py
backend/app/workers/: __init__.py  email_workers.py  redis_workers.py  start.py  vector_db_workers.py
backend/public/uploads/: 8b3b0625-8d2d-461c-8561-3231b7a23f26.docx
backend/schedulers/: delete_scheduler.py  enque_scheduler.py  main.py
client/: Dockerfile  index.html  package.json  pnpm-lock.yaml
client/src/: App.css  App.tsx  main.tsx
client/src/components/: ChatSideBar.tsx  CreatePatientModal.tsx  HealthTrendChart.tsx  ReportList.tsx  TypeWriter.tsx
client/src/hooks/: useAuth.tsx
client/src/lib/: apiCall.ts
client/src/pages/: Chat.tsx  MyMembers.tsx  MyReports.tsx  Report.tsx  UploadFile.tsx  dashboard.tsx  home.tsx
client/src/pages/auth/: Protected.tsx  Public.tsx  SignIn.tsx  SignUp.tsx  VerifyAccount.tsx
